# diffjoy

./: .syntastic_avrgcc_config  .syntastic_c_config  README.rst  README.txt  diffjoy.sch  flake.nix  pyproject.toml
pedal_controller/: __main__.py
src/: Makefile  main.c  usbconfig.h
